<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Texto"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"/>

    <Button
        android:id="@+id/changeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar Activity"/>

    <Button
        android:id="@+id/changeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="nuevo valor"/>
</LinearLayout>