<resources>
    <string name="app_name">Espresso</string>

    <!-- Vars valid to test-->
    <string name="str_usr_valid">TEST</string>
    <string name="str_empty_valid">VACIO</string>
</resources>
